# visual_servor

./: CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.py
config/: home.yaml  pendulum_calibration.yaml
launch/: keyboard_teleop_base.launch  orbbec.launch  realsense.launch  serving_demo.launch  teleop_collision.launch  visual_servor.launch
msg/: SystemState.msg  Target.msg
scripts/: .gitignore  calibrate_hanging_tray.py  calibrate_pendulum.py  collision_teleop.py  compute_mu_from_vicon_data.py  control_node.py  demo.py  demo2.py  ell.py  pendulum_calibration.yaml  plot_bag_dir.py  plot_bag_obj_err.py  range.py  record.py  record_bag.py  run_hardware_experiment.py  run_simulation_experiment.py  segment.py  serving_demo.py  simulation.py  stabilize_hanging_tray.py  stabilize_pendulum.py  train_seg_hand_up.py  trial.py  view.py  vision_node.py  waiter_control_node.py  waiter_vision_node.py
scripts/diagnostics/: base_pendulum_offset.py  collision_teleop.py
scripts/misc/: ell.py  kinematics.py  range.py  trapezoidal.py
scripts/runs/pose/train/: args.yaml
scripts/simulation/: pendulum.py  pendulum_active_damp.py  pendulum_robot.py  robot_invert_pendulum.py
src/serving_demo/: __init__.py  collision.py  motion.py  stabilizer.py  vision.py
src/visual_servor/: __init__.py  collision.py  friction.py  motion.py  simulation.py  stabilizer.py  utils.py
urdf/: tray_pendulum.urdf.xacro
yolo/: .gitignore  README.md  annotations_to_labels.py  launch_job.slrm  pyproject.toml  train.py  visual_servor_yolo.yaml
yolo/scripts/: train.py
(+3 files in other folders)
