<?xml version="1.0"?>
<package format="2">
  <name>serving_demo</name>
  <version>0.1.0</version>
  <description>Robot waiter serving demo.</description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <license>MIT</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
